# antithesis

./: .editorconfig  .gitignore  CODEOWNERS  CONTRIBUTING.md  LICENSE  Logbook.md  README.md  SECURITY.md  cabal.project
.github/workflows/: cardano-node.yaml  publish-site.yaml
adversarial/: CHANGELOG.md  README.md  adversarial.cabal
adversarial/src/: Adversary.hs
adversarial/test/: AdversarialSpec.hs
adversary/: Dockerfile  adversary.cabal  cabal.project  flake.nix  justfile  sleep.sh
adversary/app/: Main.hs
adversary/composer/chain-sync-client/: eventually_converged.sh  parallel_driver_flaky_chain_sync.sh
adversary/nix/: project.nix
adversary/src/: Adversary.hs
adversary/src/Adversary/: ChainSync.hs  ChainSyncOld.hs
adversary/test/: AdversarySpec.hs
cli/: .gitignore  CHANGELOG.md  README.md  anti.cabal  antithesis-interface.md  cabal.project  flake.nix  justfile  pop-cli.cabal  project.nix
cli/CD/anti-agent/: docker-compose.yaml
cli/CD/anti-oracle/: docker-compose.yaml
cli/CI/: release.sh
cli/app/: Main.hs  Wallet.hs  anti-agent.hs  anti-oracle.hs
cli/docs/: antithesis-agent-role.md  antithesis-interface.md  code-design-decisions.md  code-design.md  oracle-role.md  real-world.md  requester-role.md  secrets-management.md
cli/nix/: anti-agent-docker.nix  anti-linux-artifacts.nix  anti-macos-artifacts.nix  anti-oracle-docker.nix  anti-project.nix
cli/src/: App.hs  Cli.hs  Docker.hs  Facts.hs  Options.hs  Submitting.hs  Types.hs  Validation.hs  Words.hs
cli/src/Anti/: API.hs  Cli.hs  Main.hs  Options.hs  Types.hs
cli/src/Core/: Context.hs  Encryption.hs  Options.hs  Types.hs
cli/src/Core/Types/: Basic.hs  CageDatum.hs  Change.hs  Fact.hs  MPFS.hs  Mnemonics.hs  Operation.hs  Tx.hs  Wallet.hs
cli/src/Lib/: Box.hs  CanonAeson.hs  CryptoBox.hs  EdToCurve.hs  GitHub.hs  JSON.hs  System.hs
cli/src/Lib/Github/: CommonIO.hs  GetRepoRole.hs  GetRepoRoleIO.hs  ListPublicKeys.hs  ListPublicKeysIO.hs
cli/src/Lib/Options/: Secrets.hs
cli/src/Lib/SSH/: Key.hs  Private.hs  Public.hs
cli/src/MPFS/: API.hs  Types.hs
cli/src/Oracle/: Cli.hs  Options.hs  Process.hs  Types.hs  Validate.hs
cli/src/Oracle/Config/: Cli.hs  Options.hs  Types.hs
cli/src/Oracle/Github/: CommonIO.hs  FactRequester.hs  GetRepoRole.hs  GetRepoRoleIO.hs  ListPublicKeys.hs  ListPublicKeysIO.hs
cli/src/Oracle/Token/: API.hs  Cli.hs  Options.hs
cli/src/Oracle/Validate/: Cli.hs  DownloadAssets.hs  Failure.hs  Logic.hs  Options.hs  Request.hs  Types.hs
cli/src/Pop/: Cli.hs
cli/src/User/: Cli.hs  Options.hs  Types.hs
cli/src/User/Agent/: Cli.hs  (+5 more)
cli/src/Validation/: DownloadFile.hs  RegisterRole.hs  RegisterUser.hs
cli/src/Wallet/: Cli.hs  Options.hs
cli/test/: CliSpec.hs  E2ESpec.hs  MockMPFS.hs
cli/test-E2E/: E2ESpec.hs  Main.hs
cli/test-E2E/MPFS/: APISpec.hs
cli/test-E2E/fixtures/: cfhal_ed25519  docker-compose.yml  local-preprod.sh  test_ed25519
cli/test-E2E/scenarios/: lib.sh  realWorld.sh  retractions.sh  validateATestRun.sh  validateUserRegAddRole.sh
cli/test-integration/: Main.hs
cli/test-integration/Lib/: GitHubSpec.hs
cli/test/Anti/: APISpec.hs  CliSpec.hs  Server.hs
cli/test/Core/: EncryptionSpec.hs
cli/test/Lib/: CanonAesonSpec.hs  CryptoBoxSpec.hs  EdToCurveSpec.hs  JSONSpec.hs
cli/test/MPFS/: APISpec.hs  Server.hs  TypesSpec.hs
cli/test/Oracle/: TypesSpec.hs
cli/test/Pop/: CliSpec.hs
cli/test/User/: TypesSpec.hs
cli/test/Wallet/: CliSpec.hs
cli/test/data/: docker-compose.yaml
cli/test/fixtures/: anti-config.json  cfhal_ed25519  docker-compose.yml  local-preprod.sh  test_ed25519.pub
cli/test/scenarios/: acceptATestRun.sh  finishATestRun.sh  lib.sh  realWorld.sh  rejectATestRun.sh  retractions.sh  validateATestRun.sh  validateUserRegAddRole.sh  validationTest.sh
compose/: Dockerfile.compiled  Dockerfile.configurator  Dockerfile.dingo  Dockerfile.source  Dockerfile.tracer.source  Makefile  README.md  canary_tx.sh  cardano-node.sh  configurator.sh  dingo.sh  run-tracer.sh
compose/config/: Dockerfile
compose/configurator/: Dockerfile  configurator.sh
compose/sidecar/: Dockerfile  sidecar.sh
compose/testnets/anviking_more_assertions/: README.md  docker-compose.yaml  testnet.yaml
compose/testnets/anviking_sometimes_forks/: README.md  docker-compose.yaml  testnet.yaml
compose/testnets/cardano_node_10.4.1/: README.md  docker-compose.yaml  testnet.yaml
compose/testnets/cardano_node_10.4.1_dingo/: README.md  docker-compose.yaml
compose/testnets/cardano_node_10.4.1_dingo_0.12.0/: README.md  docker-compose.yaml
compose/testnets/cardano_node_10.5.1/: docker-compose.yaml
compose/testnets/cardano_node_latest/: README.md  docker-compose.yaml  testnet.yaml
compose/testnets/cardano_node_master/: docker-compose.yaml
compose/testnets/cardano_node_ogmios/: README.md  docker-compose.yaml
compose/testnets/cardano_node_with_adversary/: docker-compose.yaml
compose/testnets/example_10.2.1/: docker-compose.yaml  testnet.yaml
compose/testnets/karknu_10.2.0_anthithesis/: README.md  docker-compose.yaml  testnet.yaml
compose/testnets/karknu_10.2.1_read_buffer/: README.md  docker-compose.yaml  testnet.yaml
compose/testnets/karknu_10.3.0_ig_turbo/: README.md  docker-compose.yaml
compose/testnets/karknu_10.3.0_pre/: README.md  docker-compose.yaml
compose/tracer/: Dockerfile.compiled  run-tracer.sh  tracer-config.yaml
compose/tracer-sidecar/: .gitignore  CHANGELOG.md  Dockerfile  README.md  cabal.project  flake.nix  justfile  test.jsonl  tracer-sidecar.cabal
compose/tracer-sidecar/app/: Antithesis.hs  LogMessage.hs  Main.hs
compose/tracer-sidecar/nix/: project.nix
compose/tracer-sidecar/output/: -actual
compose/tracer-sidecar/src/Cardano/Antithesis/: LogMessage.hs  Sdk.hs  Sidecar.hs
compose/tracer-sidecar/test/: Main.hs  Spec.hs
compose/tracer-sidecar/test/data/: input.jsonl  output.jsonl
docs/: .gitignore  docusaurus.config.ts  package-lock.json
docs/blog/: 2025-04-02-kick-off-antithesis.md  2025-05-01-poc-results.md  2025-09-08-some-news.md  authors.yml  tags.yml
docs/src/css/: custom.css
(+50 files in other folders)
