cabal-version:   3.0
name:            adversarial
version:         0.1.0.0
license:         Apache-2.0
license-file:    LICENSE
author:          HAL team
maintainer:      hal@cardano-foundation.org
category:        Testing
build-type:      Simple
extra-doc-files: CHANGELOG.md

common warnings
    ghc-options: -Wall

executable adversarial
    import:           warnings
    main-is:          Main.hs
    build-depends:    base ^>=4.18.3.0
    hs-source-dirs:   app
    default-language: Haskell2010
