cabal-version:   3.0
name:            adversarial
version:         0.1.0.0
license:         Apache-2.0
license-file:    LICENSE
author:          HAL team
maintainer:      hal@cardano-foundation.org
category:        Testing
build-type:      Simple
extra-doc-files: CHANGELOG.md

common settings
    ghc-options: -Wall
    default-language:   Haskell2010

library
    import: settings
    hs-source-dirs:   src
    build-depends:    base
                    , aeson
                    , text
    exposed-modules:  Adversary

executable adversarial
    import:           settings
    main-is:          Main.hs
    build-depends:    base ^>=4.18.3.0, adversarial
    hs-source-dirs:   app

test-suite adversarial-test
    import:           settings
    other-modules:    AdversarialSpec
    type:             exitcode-stdio-1.0

    hs-source-dirs:   test

    main-is:          Main.hs

    build-depends:
      , base
      , aeson
      , hspec
      , QuickCheck
      , adversarial

    build-tool-depends: hspec-discover:hspec-discover
