cabal-version:   3.0
name:            adversary
version:         0.1.0.0
license:         Apache-2.0
license-file:    LICENSE
author:          HAL team
maintainer:      hal@cardano-foundation.org
category:        Testing
build-type:      Simple
extra-doc-files: CHANGELOG.md

common settings
    ghc-options: -Wall
    default-language:   Haskell2010

library
    import: settings
    hs-source-dirs:   src
    build-depends:    base
                    , aeson
                    , text

                    , async
                    , bytestring
                    , containers
                    , contra-tracer
                    , directory
                    , infinite-list
                    , network-mux
                    , optparse-applicative
                    , io-classes:{strict-stm}
                    , ouroboros-network:ouroboros-network
                    , ouroboros-network-api
                    , ouroboros-network-framework
                    , ouroboros-network-mock
                    , ouroboros-network-protocols
                    , random
                    , serialise
                    , typed-protocols

    exposed-modules:  Adversary
    other-modules:    Adversary.ChainSync

executable adversary
    import:           settings
    main-is:          Main.hs
    build-depends:    base, adversary
    hs-source-dirs:   app

test-suite adversary-test
    import:           settings
    other-modules:    AdversarySpec
    type:             exitcode-stdio-1.0

    hs-source-dirs:   test

    main-is:          Main.hs

    build-depends:
      , base
      , aeson
      , hspec
      , QuickCheck
      , adversary

    build-tool-depends: hspec-discover:hspec-discover
