cabal-version:   3.0
name:            adversary
version:         0.1.0.0
license:         Apache-2.0
license-file:    LICENSE
author:          HAL team
maintainer:      hal@cardano-foundation.org
category:        Testing
build-type:      Simple
extra-doc-files: CHANGELOG.md

common settings
  ghc-options:
    -Wall -Wunused-imports -Wunused-packages -Wmissing-export-lists
    -Wname-shadowing -Wdeferred-out-of-scope-variables
    -Wpartial-type-signatures -Wredundant-constraints

  default-extensions:
    BangPatterns
    DeriveAnyClass
    DeriveGeneric
    DerivingStrategies
    DuplicateRecordFields
    FlexibleContexts
    FlexibleInstances
    ImportQualifiedPost
    LambdaCase
    NamedFieldPuns
    OverloadedStrings
    RecordWildCards
    ScopedTypeVariables
    TypeApplications
    TypeFamilies
    TypeOperators

library
  import:          settings
  hs-source-dirs:  src
  build-depends:
    , cardano-ledger-byron
    , ouroboros-consensus-protocol ^>=0.12.0.0
    , ouroboros-consensus
    , aeson
    , base
    , bytestring
    , contra-tracer
    , io-classes
    , strict-stm
    , network
    , network-mux
    , ouroboros-network-mock
    , ouroboros-network-api
    , ouroboros-network
    , ouroboros-network-framework
    , ouroboros-network-protocols
    , ouroboros-consensus-cardano ^>= 0.25
    , typed-protocols
    , serialise
    , text

  exposed-modules: Adversary
  other-modules:
    Adversary.ChainSync
    Adversary.ChainSyncOld

executable adversary
  import:         settings
  main-is:        Main.hs
  build-depends:
    , adversary
    , base

  hs-source-dirs: app

test-suite adversary-test
  import:             settings
  other-modules:      AdversarySpec
  type:               exitcode-stdio-1.0
  hs-source-dirs:     test
  main-is:            Main.hs
  build-depends:
    , adversary
    , aeson
    , base
    , hspec
    , QuickCheck

  build-tool-depends: hspec-discover:hspec-discover
