cabal-version:      3.4
name:               tracer-sidecar
version:            0.1.0.0
-- synopsis:
-- description:
license:            Apache-2.0
license-file:       LICENSE
author:             Cardano Foundation
maintainer:         hal@cardanofoundation.org
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable tracer-sidecar
    import:           warnings
    main-is:          Main.hs
    -- other-extensions:
    build-depends:    base
                    , aeson
                    , aeson-qq
                    , text
                    , time
                    , directory
                    , bytestring
                    , filepath
                    , containers
                    , stm
                    , generic-lens
                    , optics-core
                    , tracer-sidecar
    hs-source-dirs:   app
    default-language: Haskell2010

library
  import:          warnings
  hs-source-dirs:  src
  build-depends:
    , base
    , aeson
    , aeson-qq
    , text
    , time
    , directory
    , bytestring
    , filepath
    , containers
    , stm
    , generic-lens
    , optics-core
  exposed-modules:
    Cardano.Antithesis.Sdk
    Cardano.Antithesis.LogMessage
    Cardano.Antithesis.Sidecar

test-suite test
  import:             warnings
  type:               exitcode-stdio-1.0
  hs-source-dirs:     test
  main-is:            Main.hs
  build-depends:      base
                    , hspec
                    , tracer-sidecar
                    , aeson
                    , bytestring
                    , hspec-golden
                    , text
                    , filepath
  build-tool-depends: hspec-discover:hspec-discover
  other-modules:
   Spec
